--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -5,5 +5,5 @@ $color-text-heading: #263b5e;
 $text-color-paragraph: #6a7695;
 
 $color-blue-light: #01c9db;
-$color-blue-dark: #039bb2;
+$color-blue-dark: #02456A;
 $color-blue-verylight: #e8f5f7;
