--- a/src/scss/components/_accordion.scss
+++ b/src/scss/components/_accordion.scss
@@ -35,6 +35,7 @@
             &:before {
                 display: inline-block;
                 content: '';
+                white-space: pre;
                 height: 49px;
                 width: 69px;
                 margin-bottom: -15px;
@@ -68,5 +69,32 @@
 
     100% {
         opacity: 1;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .accordion{
+        .accordion__item{
+            box-shadow: 0px 1.44134px 9.00838px rgba(103, 122, 170, 0.2);
+            border-radius: 7.2067px;
+
+            .accordion__button{
+                font-size: 14px;
+                line-height: 18px;
+                padding: 8px 0 8px;
+                text-indent: -76px;
+                padding-left: 76px;
+
+                &::before{
+                    width: 46px;
+                    height: 32px;
+                    vertical-align: middle;
+                }
+            }
+
+            .accordion__panel{
+                padding: 12px;
+            }
+        }
     }
 }
